Bug 487777 - History menu is slow and takes ages to open, trunk version, r=dietrich